--- a/public/assets/scss/elements/_navbar.scss
+++ b/public/assets/scss/elements/_navbar.scss
@@ -1,26 +1,28 @@
 .nav-pills > li > a.active {
     background-color:  #1ab69d !important;
     border: 3px solid #31b978;    
-    height: 30px;
-    border-radius:50%;
-    -moz-border-radius:50%;
-    -webkit-border-radius:50%;
-    width:30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    // height: 30px;
+    // border-radius:50%;
+    // -moz-border-radius:50%;
+    // -webkit-border-radius:50%;
+    // width:30px;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
 }
 
 .nav-pills {
-    display: grid;
-    grid-template-columns: auto auto;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 20rem;
 }
 
 #navbar-example2 {
-    width: 100px;
+    width: max-content;
     height: max-content;
-    margin-top: 20%;
     padding: 0;
+    margin-top: 10%;
     background-color: transparent !important;
 }
 
