--- a/public/assets/scss/app.scss
+++ b/public/assets/scss/app.scss
@@ -131,7 +131,7 @@ STYLESHEET INDEXING
 @import "template/language_academy/main";
 @import "template/remote_training/main";
 @import "template/snap_scrolling";
-
+@import "template/career-path/main";
 
 /*=======================================================================
 4.Blocks Styles 
