--- a/public/assets/scss/header/_search-popup.scss
+++ b/public/assets/scss/header/_search-popup.scss
@@ -19,7 +19,7 @@
     .content-wrap {
         background-color: var(--color-white);
         width: 100%;
-        min-height: 560px;
+        min-height: 200px;
         position: relative;
         box-shadow: 0px 10px 40px 0 rgba(0,0,0, .08);
         display: flex;
@@ -27,7 +27,7 @@
         justify-content: center;
         padding: 20px;
         @media #{$sm-layout} {
-            min-height: 450px;
+            min-height: 100px;
         }
     }
     .site-logo {
@@ -48,14 +48,21 @@
             top: 40px;
             left: 20px;
         }
+        @media #{$sm-layout} {
+            display: none;
+        }
     }
     .close-button {
         position: absolute;
-        right: 62px;
-        top: 62px;
+        right: 10px;
+        top: 10px;
         @media #{$smlg-device} {
             top: 50px;
             right: 15px;
+        }
+        @media #{$sm-layout} {
+            right: 5px;
+            top: 5px;
         }
         .close-trigger {
             background: transparent;
