adding animation loading and integrate fullpage.js

--- a/public/assets/scss/app.scss
+++ b/public/assets/scss/app.scss
@@ -97,6 +97,7 @@ STYLESHEET INDEXING
 @import "elements/social-share";
 @import "elements/theme-switcher";
 @import "elements/navbar";
+@import "elements/loading";
 
 /*=======================================================================
 3. Template Styles
