--- a/public/assets/scss/elements/_navbar.scss
+++ b/public/assets/scss/elements/_navbar.scss
@@ -1,21 +1,13 @@
 .nav-pills > li > a.active {
-    background-color:  #1ab69d !important;
-    border: 3px solid #31b978;    
-    // height: 30px;
-    // border-radius:50%;
-    // -moz-border-radius:50%;
-    // -webkit-border-radius:50%;
-    // width:30px;
-    // display: flex;
-    // justify-content: center;
-    // align-items: center;
+    background-color:  transparent !important;
+    // border: 3px solid #31b978; 
 }
 
 .nav-pills {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-    width: 20rem;
+    gap: 0.5rem;
+    width: 20rem; 
 }
 
 #navbar-example2 {
@@ -26,10 +18,31 @@
     background-color: transparent !important;
 }
 
-// .navbar-toggler{
-    // border-radius: 50%;
-// }
+@media all and (max-width: 1200px) {
+    .nav-pills{
+        display: none;
+    }
+}
 
-// .navbar-toggler-icon {
-//     background-image: url("https://w.ladicdn.com/s500x450/638602896bb94b00114a6fc5/masaru-07-20240205135529-ws7a5.png");
-//  }
+.nav-link {
+    width: 60px;
+    height: 60px;
+    // display: inline-block;
+    margin:0 5px;
+    color:orange;
+    filter: url('#goo');
+}
+
+.nav-link::before {
+    content: "";
+    display: block;
+    background:currentColor;
+    padding-top: 115%; /* 100%/cos(30)  */
+    clip-path: polygon(0% 25%,0% 75%,50% 100%,100% 75%,100% 25%,50% 0%);
+  }
+.nav-link:hover {
+    background-color: aqua;
+    clip-path: polygon(0% 25%,0% 75%,50% 100%,100% 75%,100% 25%,50% 0%);
+
+    
+}
