--- a/public/assets/scss/template/_hero_banner.scss
+++ b/public/assets/scss/template/_hero_banner.scss
@@ -379,7 +379,25 @@
         align-items: flex-end;
         position: relative;
         background-color: var(--bg-color);
-        background-image: url(../../images/bg/masaru-bg-4.jpg);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        animation: autoSliderBackground 15s infinite;
+
+        @keyframes autoSliderBackground {
+            2.5%, 5%, 7.5%, 10%, 12.5%, 15%, 17.5%, 20%, 22.5%, 25% {
+                background-image:  url(../../images/bg/background_image_2.jpg);;
+            }
+            27.5%, 30%, 32.5%, 35%, 37.5%, 40%, 42.5%, 45%, 47.5%, 50% {
+                background-image:  url(../../images/bg/background_image_1.jpg);;
+            }
+            52.5%, 55%, 57.5%, 60%, 62.5%, 65%, 67.5%, 70%, 72.5%, 75% {
+                background-image:  url(../../images/bg/background_image_2.jpg);;
+            }
+            77.5%, 80%, 82.5%, 85%, 87.5%, 90%, 92.5%, 95%, 97.5%{
+                background-image:  url(../../images/bg/background_image_3.jpg);;
+            }
+        }
 
         &::before {
             content: '';
