--- a/public/assets/scss/template/_counterup.scss
+++ b/public/assets/scss/template/_counterup.scss
@@ -178,6 +178,7 @@
 .counterup-area-2 {
     position: relative;
     z-index: 1;
+    height: 80vh;
     &:before {
         content: "";
         height: 53%;
