--- a/public/assets/scss/template/_brand.scss
+++ b/public/assets/scss/template/_brand.scss
@@ -209,5 +209,12 @@
         }
     }
 }
-
+.brand-title {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 2rem;
+}
 
