--- a/public/assets/scss/template/_snap_scrolling.scss
+++ b/public/assets/scss/template/_snap_scrolling.scss
@@ -21,3 +21,11 @@
   .fp-table {
     margin-top: -4vh
   } 
+.fp-overflow {
+  .edu-course-area{
+    height: 90vh;
+  }
+  .testimonial-area-1 {
+    height: 90vh;
+  }
+}
